# wannier2sparse

./: .gitignore  AGENTS.md  CMakeLists.txt  PR_DESCRIPTION.md  README.md  agent_references.md  documentation_todo.md  legacy.md  roadmap_plans.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
agent_template/: documentation_STYLE_GUIDE.md  documentation_TEMPLATE.md  documentation_incode.md  documentation_pr.md  plotting_style.md  tutorial_style.md  tutorial_template.md
cmake/: wannier2sparseConfig.cmake.in
docs/: FINDINGS.md  conventions.md  input_file.md  operators.md
examples/: .gitignore  README.md  gen_models.py  plot_hall.py  run.sh  validate.py  w2s_dos.py
examples/01_chain1d/: README.md  chain1d.w2s  chain1d.xyz
examples/02_graphene/: README.md  graphene.eig  graphene.uc  graphene.w2s  graphene.win  graphene.wout  graphene.xyz  graphene_band.gnu  graphene_band.kpt  graphene_centres.xyz  graphene_tb.uc  graphene_tb.w2s  graphene_tb.xyz  make_bands_dos.py  make_min_figs.py
examples/03_cubic/: README.md
examples/04_haldane/: README.md
examples/05_wannier_shc_pdse2/: README.md  get_inputs.sh
examples/05_wannier_shc_pdse2/qe/: bands.in
examples/05_wannier_shc_pdse2/w90/: pdse2_proj.win  pw2wan_spn.in
examples/example_9_SHC_in_PdSe2/: README.md  get_inputs.sh
examples/example_9_SHC_in_PdSe2/qe/: nscf.in  scf.in
examples/example_9_SHC_in_PdSe2/w90/: pw2wan.in
examples/img/: chain1d_validation.caption.txt  graphene_bands_dos.caption.txt  graphene_tb_dos.caption.txt  graphene_wannier_dos.caption.txt
examples/models/: registry.tsv
include/: Version.h.in  bundle_writer.hpp  checks.hpp  descriptor.hpp  gauge.hpp  hopping_list.hpp  input_file.hpp  json_writer.hpp  local_operators.hpp  logger.hpp  operator_algebra.hpp  provenance_writer.hpp  qe_xml_parser.hpp  run_config.hpp  run_report.hpp  run_stats.hpp  sparse_matrix.hpp  system_provenance.hpp  tbmodel.hpp  w2sp_arguments.hpp  wannier_parser.hpp  win_parser.hpp
src/: CMakeLists.txt  bundle_writer.cpp  gauge.cpp  hopping_list.cpp  input_file.cpp  main.cpp  qe_xml_parser.cpp  run_config.cpp  wannier_parser.cpp  win_parser.cpp
test/: CMakeLists.txt  aliasing_safeguard.cpp  bundle_hk_rebuild.cpp  bundle_roundtrip.cpp  csr_count_equivalence.cpp  density_and_current_from_files.cpp  external_operator.cpp  gauge_spin.cpp  graphene.xyz  logger_and_stats.cpp  model_from_files.cpp  ndegen_normalization.cpp  operator_checks.cpp  orbital_L.cpp  orbital_L_fixture.cpp  project_resolution.cpp  qe_provenance.cpp  read_unit_cell_file.cpp  read_wannier_file.cpp  read_xyz_file.cpp  run_config_equivalence.cpp  run_config_sparse.cpp  run_report_receipt.cpp  spectral_bounds.cpp  spin_algebra_chain.xyz  spin_current_anticomm.cpp  spin_graphene.xyz  spin_operator_algebra.cpp  spin_roundtrip_crosscheck.cpp  w2s_input_format.cpp  wberri_crosscheck.cpp  wberri_matrix_crosscheck.cpp  wberri_texture_crosscheck.cpp  win_provenance.cpp  wsvec_split.cpp
test/fixtures/: README.md  build_qe.sh  build_w90.sh  gen_fixture.sh  wberri_reference.py
test/golden/: Fe_S_matrix.ref  Fe_S_texture.ref  README.md
tools/: doc_guard.sh  hr_exactdiag.py
